<resources>
    <string name="app_name">ConDom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="authorization">Авторизация</string>
    <string name="createAccount"><u>Нет аккаунта? Зарегистрироваться</u></string>
    <string name="enter">Войти</string>
    <string name="conference">Конференция</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="register">Зарегистрироваться</string>
    <string name="request_error">Ошибка выполнения запроса</string>
    <string name="login_input_error">Ошибка ввода данных</string>
    <string name="registration_success">Вы успешно зарегистрировались</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="speakers">Спикеры</string>
    <string name="performances">Выступления</string>
    <string name="activities">Активности</string>
    <string name="favourites">Избранное</string>
    <string name="details">Подробнее</string>
    <string name="patronymic">Отчество</string>
    <string name="phone">Телефон</string>
    <string name="dateBirt">Дата рождения</string>
    <string name="backend">Проблемы embedded или как мы от sqlite ушли</string>
    <string name="front">RTC и Франкенштейн</string>
    <string name="design">Проектирование сложных B2B-сервисов в деревне Виллабаджо</string>
    <string name="mobile">«Разработка на моках»</string>
    <string name="game">Как игры меняют наше будущее</string>
    <string name="duration">Как игры меняют наше будущее</string>
    <string name="beginner">Начало в  </string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultricies ante erat, vitae bibendum erat egestas ut. Nam vel sodales lorem. Donec nec vestibulum mi, nec semper nunc. Integer fermentum leo sit amet erat ultrices, id fringilla nunc sagittis. Etiam rutrum porttitor nunc, a tincidunt est aliquam tincidunt.</string>
    <string name="search_hint">Поиск</string>
    <string name="organizations">Оргинизации</string>
    <string name="dateEvent">Дата проведения</string>
    <string name="conferenceTopics">Направления</string>
    <string name="timeEvent">Время проведения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>