<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/main_background"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/fullscreen_dialog_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_close_white_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/fullscreen_dialog_close"
                android:text="Фильтры"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fullscreen_dialog_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="ПРИМЕНИТЬ"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t_speaker_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/speakers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/speakers_filter"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/spinner_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_speaker_filter" />

        <TextView
            android:id="@+id/t_organizations_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizations"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speakers_filter" />

        <Spinner
            android:id="@+id/organizations_filter"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/spinner_dark"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_organizations_filter" />

        <TextView
            android:id="@+id/t_conference_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conferenceTopics"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organizations_filter" />

        <Spinner
            android:id="@+id/conference_filter"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/spinner_dark"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_conference_filter" />

        <TextView
            android:id="@+id/t_date_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateEvent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conference_filter" />

        <TextView
            android:id="@+id/t_s_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="с"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_date_filter" />

        <EditText
            android:id="@+id/date_event_filter"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:hint="21.05"
            android:gravity="center"
            android:background="@drawable/edit_searchable"
            app:layout_constraintStart_toEndOf="@+id/t_s_filter"
            app:layout_constraintTop_toBottomOf="@+id/t_date_filter" />

        <TextView
            android:id="@+id/t_po_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="по"
            app:layout_constraintEnd_toStartOf="@+id/date_event_filter2"
            app:layout_constraintStart_toEndOf="@+id/date_event_filter"
            app:layout_constraintTop_toBottomOf="@+id/t_date_filter" />

        <EditText
            android:id="@+id/date_event_filter2"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:hint="23.05"
            android:gravity="center"
            android:background="@drawable/edit_searchable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_date_filter" />

        <TextView
            android:id="@+id/t_time_filter"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeEvent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_event_filter" />

        <TextView
            android:id="@+id/t_s_filter2"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="с"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_time_filter" />

        <EditText
            android:id="@+id/time_event_filter"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:hint="10:00"
            android:gravity="center"
            android:background="@drawable/edit_searchable"
            app:layout_constraintStart_toEndOf="@+id/t_s_filter2"
            app:layout_constraintTop_toBottomOf="@+id/t_time_filter" />

        <TextView
            android:id="@+id/t_po_filter2"
            style="@style/TextViewDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="по"
            app:layout_constraintEnd_toStartOf="@+id/time_event_filter2"
            app:layout_constraintStart_toEndOf="@+id/time_event_filter"
            app:layout_constraintTop_toBottomOf="@+id/t_time_filter" />

        <EditText
            android:id="@+id/time_event_filter2"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:hint="14:00"
            android:gravity="center"
            android:background="@drawable/edit_searchable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_time_filter" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>